[gd_scene load_steps=18 format=3 uid="uid://ca5w6pligjaeb"]

[ext_resource type="Script" path="res://game.gd" id="1_a4s7c"]
[ext_resource type="PackedScene" uid="uid://cdl15ju1voxhk" path="res://turret.tscn" id="2_i6sex"]
[ext_resource type="Texture2D" uid="uid://b1b76jq4rrpmv" path="res://concrete.png" id="3_5vqge"]
[ext_resource type="Texture2D" uid="uid://dljvff4hxe2vs" path="res://dotted_circle.png" id="3_x8fnx"]
[ext_resource type="PackedScene" uid="uid://7cjndxgwsyn7" path="res://wall.tscn" id="4_p5wlr"]
[ext_resource type="PackedScene" uid="uid://b8etnikxj4lia" path="res://mine.tscn" id="5_6o3kb"]
[ext_resource type="PackedScene" uid="uid://b4f4fhfvuuexk" path="res://lab.tscn" id="6_o3p7i"]
[ext_resource type="PackedScene" uid="uid://gon32otradow" path="res://launchpad.tscn" id="7_0d0ja"]
[ext_resource type="Material" uid="uid://d38cmy2vgkbmb" path="res://player.tres" id="7_1b645"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_hfirg"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_2wcm7"]
sky_material = SubResource("ProceduralSkyMaterial_hfirg")

[sub_resource type="Environment" id="Environment_kvejx"]
background_mode = 2
sky = SubResource("Sky_2wcm7")
tonemap_mode = 2

[sub_resource type="PlaneMesh" id="PlaneMesh_r4355"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_h7dw4"]
shading_mode = 0
albedo_color = Color(0.556863, 0.556863, 0.556863, 1)
albedo_texture = ExtResource("3_5vqge")
uv1_scale = Vector3(90, 100, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_ayy8k"]
size = Vector3(2000, 1, 2000)

[sub_resource type="CylinderMesh" id="CylinderMesh_lurw7"]
material = ExtResource("7_1b645")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3omxf"]
shading_mode = 0
albedo_color = Color(0.172549, 0.172549, 0.172549, 1)

[node name="Game" type="Node3D"]
script = ExtResource("1_a4s7c")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_kvejx")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.707107, 0.683013, -0.183013, 9.02727e-17, 0.258819, 0.965926, 0.707107, -0.683013, 0.183013, -2.322, 12.013, 2.584)
projection = 1
fov = 40.0
size = 10.0
far = 500.0

[node name="Ground" type="Area3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
transform = Transform3D(1000, 0, 0, 0, 1000, 0, 0, 0, 1000, 0, 0, 0)
mesh = SubResource("PlaneMesh_r4355")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_h7dw4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("BoxShape3D_ayy8k")

[node name="Ghost" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0)
visible = false

[node name="Turret" type="Node3D" parent="Ghost"]

[node name="Turret" parent="Ghost/Turret" instance=ExtResource("2_i6sex")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.08165e-12, 2.08165e-12)

[node name="Ring" type="Node3D" parent="Ghost/Turret"]
transform = Transform3D(2, 0, 0, 0, 1, 0, 0, 0, 2, 0, 0, 0)

[node name="Sprite3D" type="Sprite3D" parent="Ghost/Turret/Ring"]
transform = Transform3D(0.273457, 0, -4.16911e-24, -4.16911e-24, -1.19532e-08, -0.273457, 0, 0.273457, -1.19532e-08, 0, 0.01, 2.08165e-12)
modulate = Color(0.360784, 0.552941, 0.72549, 1)
texture = ExtResource("3_x8fnx")

[node name="Wall" parent="Ghost" instance=ExtResource("4_p5wlr")]
visible = false

[node name="Mine" parent="Ghost" instance=ExtResource("5_6o3kb")]
visible = false

[node name="Lab" parent="Ghost" instance=ExtResource("6_o3p7i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.08165e-12, 2.08165e-12)
visible = false

[node name="Enemies" type="Node" parent="."]

[node name="Buildings" type="Node" parent="."]

[node name="Launchpad" type="Node3D" parent="Buildings"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)

[node name="Launchpad" parent="Buildings/Launchpad" instance=ExtResource("7_0d0ja")]
transform = Transform3D(-1.52271e-08, 0, 0.348355, 0, 0.348355, 0, -0.348355, 0, -1.52271e-08, 0, -5.96046e-08, 0.0267985)

[node name="Rocket" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Rocket"]
transform = Transform3D(0.256716, 0, 0, 0, 0.370406, 0, 0, 0, 0.256716, -0.119003, 0.662, 2.08165e-12)
mesh = SubResource("CylinderMesh_lurw7")
skeleton = NodePath("../..")

[node name="FogOfWar" type="CSGBox3D" parent="."]
size = Vector3(2000, 2, 2000)
material = SubResource("StandardMaterial3D_3omxf")

[node name="VisibilityRing" type="CSGCylinder3D" parent="FogOfWar"]
operation = 2
radius = 7.0
height = 3.0
smooth_faces = false

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Background" type="ColorRect" parent="HUD"]
offset_right = 120.0
offset_bottom = 800.0
color = Color(0.301961, 0.301961, 0.301961, 1)

[node name="EnergyLabel" type="Label" parent="HUD"]
offset_left = 10.0
offset_top = 470.0
offset_right = 90.0
offset_bottom = 493.0
text = "Energy: 0"

[node name="EnergyDeltaLabel" type="Label" parent="HUD"]
offset_left = 10.0
offset_top = 510.0
offset_right = 120.0
offset_bottom = 570.0
theme_override_font_sizes/font_size = 13
text = "+1234 energy"
autowrap_mode = 3

[node name="EnergyDeltaLabelExtra" type="Label" parent="HUD"]
offset_left = 10.0
offset_top = 530.0
offset_right = 110.0
offset_bottom = 560.0
theme_override_font_sizes/font_size = 13
text = "per second"
autowrap_mode = 3

[node name="ScienceLabel" type="Label" parent="HUD"]
offset_left = 10.0
offset_top = 600.0
offset_right = 90.0
offset_bottom = 623.0
text = "Science: 0"

[node name="ScienceDeltaLabel" type="Label" parent="HUD"]
offset_left = 10.0
offset_top = 640.0
offset_right = 120.0
offset_bottom = 700.0
theme_override_font_sizes/font_size = 13
text = "+1234 science"
autowrap_mode = 3

[node name="ScienceDeltaLabelExtra" type="Label" parent="HUD"]
offset_left = 10.0
offset_top = 660.0
offset_right = 110.0
offset_bottom = 690.0
theme_override_font_sizes/font_size = 13
text = "per second"
autowrap_mode = 3

[node name="ScienceRequiredLabel" type="Label" parent="HUD"]
offset_left = 10.0
offset_top = 730.0
offset_right = 120.0
offset_bottom = 790.0
theme_override_font_sizes/font_size = 13
text = "1234 science required to launch rocket"
autowrap_mode = 3

[node name="TurretButton" type="Button" parent="HUD"]
offset_left = 10.0
offset_top = 10.0
offset_right = 110.0
offset_bottom = 100.0
text = "Turret"

[node name="WallButton" type="Button" parent="HUD"]
offset_left = 10.0
offset_top = 110.0
offset_right = 110.0
offset_bottom = 200.0
text = "Wall"

[node name="MineButton" type="Button" parent="HUD"]
offset_left = 10.0
offset_top = 210.0
offset_right = 110.0
offset_bottom = 300.0
text = "Mine"

[node name="LabButton" type="Button" parent="HUD"]
offset_left = 10.0
offset_top = 310.0
offset_right = 110.0
offset_bottom = 400.0
text = "Lab"

[node name="TurretShortcut" type="Label" parent="HUD"]
offset_left = 36.0
offset_top = 80.0
offset_right = 136.0
offset_bottom = 110.0
theme_override_colors/font_color = Color(0.701961, 0.701961, 0.701961, 1)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 13
text = "Shortcut: 1"
autowrap_mode = 3

[node name="WallShortcut" type="Label" parent="HUD"]
offset_left = 36.0
offset_top = 180.0
offset_right = 136.0
offset_bottom = 210.0
theme_override_colors/font_color = Color(0.701961, 0.701961, 0.701961, 1)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 13
text = "Shortcut: 2"
autowrap_mode = 3

[node name="MineShortcut" type="Label" parent="HUD"]
offset_left = 36.0
offset_top = 280.0
offset_right = 136.0
offset_bottom = 310.0
theme_override_colors/font_color = Color(0.701961, 0.701961, 0.701961, 1)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 13
text = "Shortcut: 3"
autowrap_mode = 3

[node name="LabShortcut" type="Label" parent="HUD"]
offset_left = 36.0
offset_top = 380.0
offset_right = 136.0
offset_bottom = 410.0
theme_override_colors/font_color = Color(0.701961, 0.701961, 0.701961, 1)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 13
text = "Shortcut: 4"
autowrap_mode = 3

[node name="WarningLabel" type="Label" parent="HUD"]
visible = false
offset_right = 190.0
offset_bottom = 40.0
text = "Enemies approaching!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TutorialPopup" type="ColorRect" parent="HUD"]
visible = false
offset_left = 140.0
offset_top = 6.0
offset_right = 390.0
offset_bottom = 106.0

[node name="Label" type="Label" parent="HUD/TutorialPopup"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 240.0
offset_bottom = 90.0
text = "Tutorial text"
autowrap_mode = 3

[node name="Polygon2D" type="Polygon2D" parent="HUD/TutorialPopup"]
polygon = PackedVector2Array(0, 100, -20, 50, 0, 0)

[node name="Button" type="Button" parent="HUD/TutorialPopup"]
layout_mode = 0
offset_left = 210.0
offset_top = 60.0
offset_right = 241.0
offset_bottom = 91.0
text = "Ok"

[node name="Tooltip" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 0
offset_left = 600.0
offset_top = 400.0
offset_right = 710.0
offset_bottom = 440.0
mouse_filter = 2

[node name="Label" type="Label" parent="HUD/Tooltip"]
layout_mode = 0
offset_left = 20.0
offset_right = 138.0
offset_bottom = 23.0
text = "-10 energy"

[node name="CinematicBars" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="CinematicBars"]
offset_right = 1200.0
offset_bottom = 120.0
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="CinematicBars"]
offset_top = 680.0
offset_right = 1200.0
offset_bottom = 800.0
color = Color(0, 0, 0, 1)
